--- a/cardlist/style.css
+++ b/cardlist/style.css
@@ -2,8 +2,7 @@ body{
     height: auto;
     width: auto;
     background-color: #a7a5a5;
-
-
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main{
@@ -15,6 +14,7 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
     justify-items: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .card{
@@ -26,13 +26,15 @@ body{
     display: grid;
     grid-gap: 7px;
     padding: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .task{
     width: auto;
     height: auto;
-    border: 5px solid #996ae4;
+    border: 5px solid #a576f0;
     border-radius: 5px;
-    background-color: #996ae4;
+    background-color: #a576f0;
     text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
 }
